Customised UI elements

--- a/ui/index.html
+++ b/ui/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>WiFi Connect</title>
+		<title>Bevo Things</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<!-- Latest compiled and minified CSS -->
@@ -35,7 +35,7 @@
 		<nav class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container">
 				<div class="navbar-header">
-					<a class="navbar-brand"><img id="logo" height=30 src="/img/logo.svg"></img></a>
+					<a class="navbar-brand"><img id="logo" height=30 src="/img/logo.png"></img></a>
 				</div>
 			</div>
 		</nav>
